Fix burger on mobile and add some projects

--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,12 @@ body {
   margin-right: 3em;
 }
 
-.hide-menu {
+.toggle-menu {
   display: none;
+}
+
+.hide-menu {
+  display: flex;
   position: fixed;
   background-color: #fff;
   top: 0;
@@ -312,6 +316,11 @@ body {
 .my-recent-works .project-box {
   border: 2px solid #d0d9d4;
   border-radius: 5px;
+}
+
+.project-box > img {
+  width: 100%;
+  height: 250px;
 }
 
 .projects-container a {
